crates/cctui-tui/src/snapshots/cctui__view_snapshots__help_overlay_scrolled_to_the_end.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  4 sessions  ● 3 active
 S┌ Keys · j/k to scroll ────────────────────────────────────────────────────────────────────────┐
  │  Tab         Answer the waiting prompt          j / ↓       Scroll the plan down             │
▸ │Composer                                         k / ↑       Scroll the plan up               │
  │  Esc         Close the composer               Plan card — refine                             │
  │  Enter       Send the message                   Enter       Accept the text                  │
  │  Ctrl+j / A… Insert a newline                   Esc         Discard the text                 │
  │  ↑           Recall an earlier prompt         Row glyphs                                     │
  │  ↓           Recall a later prompt              ●           working                          │
  │  Ctrl+r      Search sent prompts                ◐           stale or asleep                  │
  │  Tab         Take the session completion        ○           idle                             │
  │  Ctrl+t      Insert a canned prompt             ☾           hibernated                       │
  │Prompt history                                   ↳           subagent                         │
  │  Esc         Close the prompt list              ▸ / ▾       folded / open group              │
  │  Ctrl+n / ↓  Next prompt                        !           permission waiting on you        │
  │  Ctrl+p / ↑  Previous prompt                    ?           question waiting on you          │
  │  Enter       Put this prompt in the composer    P           plan waiting for approval        │
  │Pinned messages                                  ●N          unread messages                  │
  │  Esc         Close the pinned messages          ⚡           auto-approve on                  │
  │  Ctrl+n / ↓  Next pin                           ✕reason     how it ended                     │
  │  Ctrl+p / ↑  Previous pin                       ⚙N age      tool calls, age of the last      │
  │  Enter       Jump to the pinned message                                                      │
  └──────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
