crates/cctui-tui/src/snapshots/cctui__view_snapshots__help_overlay_tall_enough_for_the_glyph_legend.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 120
expression: "render_screen_sized(&mut app, 100, 116)"
---
 cctui  v0.0.0-test  4 sessions  ● 3 active  ! 1 need input — Ctrl+g
 S┌ Keys ────────────────────────────────────────────────────────────────────────────────────────┐
  │Anywhere                                         Enter       Put this prompt in the composer  │
▸ │  ?           Toggle this cheat sheet          File viewer                                    │
  │  q           Quit cctui                         j / ↓       Scroll down                      │
  │  /           Search the current view            k / ↑       Scroll up                        │
  │  n           Next search hit                    PgDn        Page down                        │
  │  N           Previous search hit                PgUp        Page up                          │
  │  D           Diagnose the selected session      g           Jump to the top                  │
  │  i           Session info                       q / Esc     Close the file viewer            │
  │  Ctrl+g      Jump to the next session needin…   o           Open in the desktop viewer       │
  │Session list                                   Pinned messages                                │
  │  j / ↓       Next session                       Esc         Close the pinned messages        │
  │  k / ↑       Previous session                   Ctrl+n / ↓  Next pin                         │
  │  g           First session                      Ctrl+p / ↑  Previous pin                     │
  │  G           Last session                       Enter       Jump to the pinned message       │
  │  Enter       Open the conversation              d / m       Unpin this message               │
  │  z / Tab     Fold or open the subagent group  Macros                                         │
  │  S           Fold or open the section           Esc         Close the macro list             │
  │  Z           Fold or open everything            Ctrl+n / ↓  Next macro                       │
  │  U           Show only unread sessions          Ctrl+p / ↑  Previous macro                   │
  │  p           Pin or unpin the session           Enter       Put this prompt in the composer  │
  │  x           Archive or unarchive the session Terminal pane                                  │
  │  r           Rename the session                 T / q / Esc Close the terminal pane          │
  │  A           Archive every session in the se…   j / ↓       Scroll the terminal down         │
  │  X           Kill the session                   k / ↑       Scroll the terminal up           │
  │  u           Undo the last archive            Help                                           │
  │  Space       Select or deselect the row         j / ↓       Scroll down                      │
  │  V           Select up to the anchor            k / ↑       Scroll up                        │
  │  *           Select every visible row           PgDn        Page down                        │
  │  Esc         Leave select mode                  PgUp        Page up                          │
  │Confirm prompt                                   ? / q / Esc Close this cheat sheet           │
  │  Y / y       Yes                              Model picker                                   │
  │  N / n / q … No                                 q / Esc     Close the picker                 │
  │Rename a session                                 j / ↓       Next entry                       │
  │  Enter       Save the name                      k / ↑       Previous entry                   │
  │  Esc         Discard the name                   h / ←       Focus the model list             │
  │Conversation                                     l / → / Tab Focus the effort list            │
  │  1-9         Jump to session by number          Enter       Apply model and effort           │
  │  Ctrl+f      Fork the session                 Sidebar                                        │
  │  q / Esc     Back to the session list           j / ↓       Next subagent                    │
  │  j / ↓       Scroll down                        k / ↑       Previous subagent                │
  │  k / ↑       Scroll up                          Enter       Open the subagent                │
  │  PgDn        Page down                          > / Esc     Close the sidebar                │
  │  PgUp        Page up                            u           Go to the parent session         │
  │  g           Jump to the top                  Permission card                                │
  │  G           Jump to the bottom                 y           Allow                            │
  │  t           Show timestamps                    n           Deny                             │
  │  Ctrl+c      Interrupt the turn                 A           Allow and auto-approve           │
  │  M           Change model and effort          Diagnose / info                                │
  │  >           Todo and subagent sidebar          D           Diagnose the selected session    │
  │  u           Go to the parent session           i           Session info                     │
  │  Ctrl+a      Toggle auto-approve                q / Esc     Close the panel                  │
  │  v           Select transcript lines            j / ↓       Scroll the panel down            │
  │  Ctrl+o      Attach a file                      k / ↑       Scroll the panel up              │
  │  o           Expand the focused line            PgDn        Page the panel down              │
  │  z           Expand every thinking and resul…   PgUp        Page the panel up                │
  │  R           Retry the undelivered message      g           Jump to the top of the panel     │
  │  e           Edit the undelivered message       r           Refresh the report               │
  │  x           Drop the undelivered message       y           Copy the session id              │
  │  y           Copy the focused line as Markdo… Question card                                  │
  │  Y           Copy the code under the cursor     Esc         Answer later                     │
  │  Ctrl+y      Copy a link to this session        j / ↓       Next option                      │
  │  :           Run a command (:export)            k / ↑       Previous option                  │
  │  f           Cycle assistant / you / tools      1-9         Pick an option by number         │
  │  F           Choose which lines to show         Space       Toggle the focused option        │
  │  T           Watch the live terminal            Tab         Next question                    │
  │  Ctrl+r      Search sent prompts                Shift+Tab   Previous question                │
  │  m           Pin or unpin the focused line      o           Write a free-text answer         │
  │  '           Open the pinned messages           Enter       Send the answer                  │
  │  Ctrl+t      Insert a canned prompt           Question card — free text                      │
  │  Tab         Answer the waiting prompt          Enter       Accept the text                  │
  │  g f         Open the file under the cursor     Esc         Discard the text                 │
  │Composer                                       Plan card                                      │
  │  Ctrl+o      Attach a file                      Esc         Answer later                     │
  │  Bksp        Remove the focused attachment      1           Approve, auto-accept edits       │
  │  Alt+Bksp    Focus the attachment chips         2           Approve, manually approve edits  │
  │  →           Next attachment chip               3           Keep planning                    │
  │  ←           Previous attachment chip           r           Refine the plan                  │
  │  Esc         Close the composer                 j / ↓       Scroll the plan down             │
  │  Enter       Send the message                   k / ↑       Scroll the plan up               │
  │  Ctrl+j / A… Insert a newline                 Plan card — refine                             │
  │  ↑           Recall an earlier prompt           Enter       Accept the text                  │
  │  ↓           Recall a later prompt              Esc         Discard the text                 │
  │  Ctrl+r      Search sent prompts              Row glyphs                                     │
  │  Tab         Take the session completion        ●           working                          │
  │  Ctrl+t      Insert a canned prompt             ◐           stale or asleep                  │
  │Search and commands                              ○           idle                             │
  │  Enter       Run it                             ☾           hibernated                       │
  │  Esc         Abandon it                         ↳           subagent                         │
  │  Tab         Complete the path                  ▸ / ▾       folded / open group              │
  │Filter menu                                      !           permission waiting on you        │
  │  F / q / Esc Choose which lines to show         ?           question waiting on you          │
  │  a           Show every category                P           plan waiting for approval        │
  │  r           Back to the default filter         ●N          unread messages                  │
  │  Space / En… Show or hide this category         ⚡           auto-approve on                  │
  │  j / ↓       Next category                      ⏸           account soft-limited             │
  │  k / ↑       Previous category                  ⚠           account traffic never seen       │
  │Prompt history                                   ❄           cache cold, next turn re-reads   │
  │  Esc         Close the prompt list              ✕reason     how it ended                     │
  │  Ctrl+n / ↓  Next prompt                        ⚙N age      tool calls, age of the last      │
  │  Ctrl+p / ↑  Previous prompt                                                                 │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  │                                                                                              │
  └──────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
