crates/cctui-tui/src/snapshots/cctui__view_snapshots__history_picker.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25
∴ thinking (2 lines)  (2 more · o)                                                                 ▕
 Read  crates/cctui-tui/src/main.rs  read                                                          ▕
└ 984 lines                                                                                        ▕
 Bash ┌ Prompt history ──────────────────────────────────────────────────────────────────────┐     ▕
└ ✗ ex│ filter ▏                                                                             │     ▐
      │                                                                                      │     ▐
● Assi│❯ second prompt                                                                       │     ▐
Lookin│  first prompt                                                                        │     ▐
      │                                                                                      │     ▐
- one │                                                                                      │     ▐
- two │                                                                                      │     ▐
⏱ 12.4│                                                                                      │     ▐
⏱ 38s │                                                                                      │     ▐
      │                                                                                      │     ▐
◆ lane│                                                                                      │     ▐
the pa│                                                                                      │     ▐
· keep│                                                                                      │     ▐
⟳ cont│ ↑↓ Pick  Enter Recall  Esc Cancel                                                    │     ▐
      └──────────────────────────────────────────────────────────────────────────────────────┘     ▐
◁ Reply done                                                                                       ▐
────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
