crates/cctui-tui/src/snapshots/cctui__view_snapshots__instance_panel_shows_a_rolled_back_run.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2368
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g  @dev (admin)
 1 Sessions  2  3  4  6  8   starred · live · dispatched  sort: activity ↓  group: status
   ▾┌ Instance ────────────────────────────────────────────────────────────────────────────────┐
▸   │ name              cyberia                                                                │
   ▾│ version           v0.23.0                                                                │
    │ channel           stable                                                                 │
    │ latest available  v0.23.1                                                                │
    │ self-update       update hook                                                            │
   ▾│                                                                                          │
    │ last update run                                                                          │
    │ phase             rolled back  (v0.23.0 → v0.23.1)                                       │
    │ detail            kubectl rollout restart deploy/cctui                                   │
    │ exit              1                                                                      │
    │                                                                                          │
    │ command output                                                                           │
    │   health check never reported 0.23.1                                                     │
    │                                                                                          │
    │  this deployment has an update hook, so no agent is involved                             │
    │                                                                                          │
    │                                                                                          │
    │ p:check upstream  U:update  Ctrl+r:refresh  Esc:close                                    │
    └──────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
