crates/cctui-tui/src/snapshots/cctui__view_snapshots__instance_panel_up_to_date.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2305
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g  @dev (admin)
 1 Sessions  2  3  4  6  8   starred · live · dispatched  sort: activity ↓  group: status
   ▾┌ Instance ────────────────────────────────────────────────────────────────────────────────┐
▸   │ name              cyberia                                                                │
   ▾│ version           v0.23.0                                                                │
    │ channel           stable                                                                 │
    │ latest available  up to date                                                             │
    │ self-update       update hook                                                            │
   ▾│                                                                                          │
    │ no update run yet                                                                        │
    │                                                                                          │
    │  this deployment has an update hook, so no agent is involved                             │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │ p:check upstream  Ctrl+r:refresh  Esc:close                                              │
    └──────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
