crates/cctui-tui/src/snapshots/cctui__view_snapshots__instance_panel_with_an_update_and_release_notes.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2320
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g  @dev (admin)
 1 Sessions  2  3  4  6  8   starred · live · dispatched  sort: activity ↓  group: status
   ▾┌ Instance ────────────────────────────────────────────────────────────────────────────────┐
▸   │ name              cyberia                                                                │
   ▾│ version           v0.23.0                                                                │
    │ channel           stable                                                                 │
    │ latest available  v0.23.1                                                                │
    │ self-update       update hook                                                            │
   ▾│                                                                                          │
    │ no update run yet                                                                        │
    │                                                                                          │
    │ release notes                                                                            │
    │  v0.23.1                                                                                 │
    │    - fixed the reconnect watchdog                                                        │
    │    - faster list paging                                                                  │
    │                                                                                          │
    │  this deployment has an update hook, so no agent is involved                             │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │ p:check upstream  U:update  Ctrl+r:refresh  Esc:close                                    │
    └──────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
