crates/cctui-tui/src/snapshots/cctui__view_snapshots__instance_panel_without_a_configured_self_update_machine.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2326
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g  @dev (admin)
 1 Sessions  2  3  4  6  8   starred · live · dispatched  sort: activity ↓  group: status
   ▾┌ Instance ────────────────────────────────────────────────────────────────────────────────┐
▸   │ name              cyberia                                                                │
   ▾│ version           v0.23.0                                                                │
    │ channel           stable                                                                 │
    │ latest available  v0.23.1                                                                │
    │ self-update       not configured                                                         │
   ▾│                                                                                          │
    │ no update run yet                                                                        │
    │                                                                                          │
    │  no self-update machine is configured (set one in the web UI)                            │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │ p:check upstream  Ctrl+r:refresh  Esc:close                                              │
    └──────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
