crates/cctui-tui/src/snapshots/cctui__view_snapshots__instance_update_confirm_names_the_mechanism.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2333
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g  @dev (admin)
 1 Sessions  2  3  4  6  8   starred · live · dispatched  sort: activity ↓  group: status
   ▾┌ Instance ────────────────────────────────────────────────────────────────────────────────┐
▸   │ update this server to v0.23.1?                                                           │
   ▾│                                                                                          │
    │  deterministic update                                                                    │
    │                                                                                          │
    │  the machine runs this deployment's own update command, checks that the new version      │
   ▾│answers, and rolls back if it does not                                                    │
    │                                                                                          │
    │  Enter starts it, Esc keeps this version.                                                │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │ Enter:update  Esc:keep this version                                                      │
    └──────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
