crates/cctui-tui/src/snapshots/cctui__view_snapshots__instance_update_confirm_warns_when_an_agent_will_do_it.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2340
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g  @dev (admin)
 1 Sessions  2  3  4  6  8   starred · live · dispatched  sort: activity ↓  group: status
   ▾┌ Instance ────────────────────────────────────────────────────────────────────────────────┐
▸   │ update this server to v0.23.1?                                                           │
   ▾│                                                                                          │
    │  agent fallback                                                                          │
    │                                                                                          │
    │  an agent in YOLO mode will take over the operation, with a short interruption           │
   ▾│                                                                                          │
    │  Enter starts it, Esc keeps this version.                                                │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │ Enter:update  Esc:keep this version                                                      │
    └──────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
